--- a/pawmedia.html
+++ b/pawmedia.html
@@ -78,7 +78,7 @@
             color: white;
             padding: 20px;
             text-align: center;
-            margin-top: auto;
+            margin-top: auto; 
         }
         footer .social-icons {
             margin-top: 10px;
@@ -99,11 +99,13 @@
         <nav>
             <a href="pet.html">Home</a>
             <a href="about.html">About Us</a>
+            <a href="furry.html">Furry Rent</a>
         </nav>
         <div class="logo-space">
             <img src="H:/Semester 2/fsd/main logo.png" alt="Pawfect Logo">
         </div>
         <nav>
+            <a href="pawmedia.html">PawMedia</a>
             <a href="product.html">Products</a>
             <a href="vet.html">Veterinary</a>
         </nav>
@@ -133,6 +135,7 @@
     </main>
     <footer>
         <p>Contact Us: info@pawfect.com | +91 9201213131</p>
+        <a href="about.html">About Us</a>
         <div class="social-icons">
             <a href="https://instagram.com" target="blank">
                 <img src="H:\Semester 2\Instagram_icon.png" alt="Instagram">
@@ -145,5 +148,6 @@
             </a>
         </div>
     </footer>
+
 </body>
 </html>
