--- a/product.html
+++ b/product.html
@@ -80,7 +80,7 @@
             color: white;
             padding: 20px;
             text-align: center;
-            margin-top: auto;
+            margin-top: auto; 
         }
         footer .social-icons {
             margin-top: 10px;
@@ -101,6 +101,7 @@
         <nav>
             <a href="pet.html">Home</a>
             <a href="about.html">About Us</a>
+            <a href="product.html">Product</a>
         </nav>
         <div class="logo-space">
             <img src="H:/Semester 2/fsd/main logo.png" alt="Pawfect Logo">
@@ -108,11 +109,12 @@
         <nav>
             <a href="vet.html">Veterinary</a>
             <a href="pawmedia.html">PawMedia</a>
+            <a href="furry.html">Furry Rent</a>
         </nav>
     </header>
     <main>
         <h2>Our Products</h2>
-        <div class="product-grid" onmouseover="onmouse()">
+        <div class="product-grid">
             <div class="product-card">
                 <a href="https://www.amazon.in/Himalaya-Healthy-Food-Adult-Kibble/dp/B0CZ74S61F?source=ps-sl-shoppingads-lpcontext&ref_=fplfs&psc=1&smid=A2AL6IVND0I91F" target="_blank">
                     <img src="H:\Semester 2\1-removebg-preview.png" alt="Product 1">
@@ -169,13 +171,9 @@
             </div>
         </div>
     </main>
-    <script>
-        function onmouse(){
-            alert("baaam");
-        }
-    </script>
     <footer>
         <p>Contact Us: info@pawfect.com | +91 9201213131</p>
+        <a href="about.html">About Us</a>
         <div class="social-icons">
             <a href="https://instagram.com" target="blank">
                 <img src="H:\Semester 2\Instagram_icon.png" alt="Instagram">
