--- a/vet.html
+++ b/vet.html
@@ -85,7 +85,7 @@
             color: white;
             padding: 20px;
             text-align: center;
-            margin-top: auto;
+            margin-top: auto; 
         }
         footer .social-icons {
             margin-top: 10px;
@@ -106,6 +106,7 @@
         <nav>
             <a href="pet.html">Home</a>
             <a href="about.html">About Us</a>
+            <a href="pawmedia.html">PawMedia</a>
         </nav>
         <div class="logo-space">
             <img src="H:/Semester 2/fsd/main logo.png" alt="Pawfect Logo">
@@ -113,6 +114,7 @@
         <nav>
             <a href="product.html">Products</a>
             <a href="vet.html">Veterinary</a>
+            <a href="furry.html">Furry Rent</a>
         </nav>
     </header>
     <main>
@@ -143,6 +145,7 @@
     </main>
     <footer>
         <p>Contact Us: info@pawfect.com | +91 9201213131</p>
+        <a href="about.html">About Us</a>
         <div class="social-icons">
             <a href="https://instagram.com" target="blank">
                 <img src="H:\Semester 2\Instagram_icon.png" alt="Instagram">
